updated frontpage and nav menu

--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 theme: jekyll-theme-minimal
-title: Predicting HCI from Cognitive Score Exams in the ADNI Dataset
+title: Main Page
 description: Can we better target who undergoes expensive PET scans?
 baseurl:
 markdown: kramdown
