fixed jeckyll theme

--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-theme: jekyll-theme-minimal
+theme: jekyll-theme-primer
 title: Main Page
 description: Can we better target who undergoes expensive PET scans?
 baseurl:
